-----------------
HISTORY OF FMEDIA
-----------------

 "+" - new feature
 "*" - change, update or a small improvement
 "-" - bugfix
 "!" - broken compatibility


fmedia v1.12.1 - Oct 12, 2019

 + help.txt: French translation


fmedia v1.12 - Sep 15, 2019

 + GUI: "Show Media Info": add file size, file date, audio info
 - GUI: redraw items after tab switch for a large playlist
 - GUI: "Show File in Explorer" didn't work if the entry was selected by "Selection Follows Cursor"
 - GUI: crash on closing playlist (v1.2 bug)
 * ID3v1 read: skip spaces at the end of tag fields
 - --dynanorm: crash or error on stop command during playback
 - core: fix crash or mono->stereo channel conversion (v1.11 bug)
 * queue: play next track after read/decode error
 + file.stdout: add "buffer_size" config setting
 - file input: random seek error (v1.9 bug)
 - Linux: core.so: don't use glibc 2.29
 * log: print input file name for error/info messages


fmedia v1.11 - Aug 27, 2019

 + support multi-channel (5.1, 7.1) conversion
 + FLAC-OGG: read FLAC in OGG container (radio streams are also supported)
 + --split=TIME: Split audio by equal time intervals (.wav input only)
 + file output: new "$counter" variable for file name
 * queue: playlist save: write to a file safely
 - GUI: Linux: update UI on radio meta change
 * Linux: don't use glibc 2.29 (fix binary compatibility with older OS)
 - Windows: opening wildcard file names didn't work (v1.10 bug)


fmedia v1.10.1 - Jul 18, 2019

 - GUI: windows: convert: empty text in 'output' combobox (v1.10 bug)
 - GUI: windows: convert: couldn't add files for conversion (v1.10 bug)
 - GUI: linux: auto-apply volume for the next track
 - queue: crash on parallel conversion (v1.3 bug)
 - file: random crash (v1.9 bug)
 - "--channels=left" didn't work (v0.34 bug)


fmedia v1.10 - Jul 8, 2019

 + GUI: restore list's column width on startup
 + GUI: Windows: convert.output is a dropdown list; restore on startup